--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
 		]
 	},
 	"scripts": {
-		"test": "node ./test/runTest.js"
+		"test": "node ./test/runTest.js",
+		"mocha": "mocha ./test/suite/linter/linter.js"
 	},
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
